                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 16-12-2005 changed: video stacking cd selector bypass is now configurable, found in settings ->  my video -> video player
 - 16-12-2005 added: Built in command XBMC.TakeScreenShot thanks to Donno
 - 16-12-2005 changed: the video stacked-cd selector dialog will choose the first file after 60 seconds
 - 16-12-2005 fixed: IMDB lookup of plotsummary when a "Title?tt#######" url is in the nfo file
 - 15-12-2005 fixed: [ 1380351 ] Autoshutdown if slideshow screensaver is activated
 - 15-12-2005 fixed: Progress dialog could stay on screen after a calling up the shoutcast list via the webserver.
 - 15-12-2005 added: XBMC.PlayerControl(BigSkipForward), BigSkipBackward, SmallSkipForward and SmallSkipBackward built in functions.
 - 15-12-2005 changed: Skin version updated to 1.85 (version 1.3 skins still run, but skinners need to update)
 - 15-12-2005 updated: German language file
 - 15-12-2005 updated: Spanish language file (Thnx to traxis)
 - 15-12-2005 updated: Italian language file (Thnx to kotix)
 - 15-12-2005 updated: Chinese (Traditional) language file (Thnx to omenpica)
 - 15-12-2005 updated: Korean language file (Thnx to AkoXko)
 - 15-12-2005 updated: Swedish language file (Thnx to blittan)
 - 15-12-2005 updated: Norwegian language file (Thnx to vnm)
 - 15-12-2005 updated: Danish language file (Thnx to hugener)
 - 15-12-2005 added: rarred subtitles to manual subtitle selection.
 - 15-12-2005 changed: better rarred subtitle handling - thanks to syra!
 - 14-12-2005 fixed: Sliding dialogs didn't reverse their direction correctly when hidden early.
 - 14-12-2005 added: Keyboard SetHeading patch thans to Nuka1195